--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #314131;
     color: white;
     text-align: center;
     padding: 10px;
@@ -29,7 +29,7 @@ section {
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #4CAF50;
+    background-color: #313d31;
     color: white;
     position: fixed;
     bottom: 0;
